--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('{{ url_for('static', filename='images/background.jpg') }}');
+            background-image: url('https://github.com/dheerajreddy71/Farmer-desk/blob/main/static/images/background.jpg');
             background-size: cover;
             color: #333;
             margin: 0;
